# data-factory

./: .gitignore  README.md  pyproject.toml
src/data_factory/: utils.py
src/data_factory/enrichjsons/: custom_module.py  enriched_paper.py  enricher.py  fos_classifier.py  nerer.py  runner.py  summarizer.py  vectorizer.py
src/data_factory/enrichjsons/configs/: basic.toml
src/data_factory/enrichjsons/models/spacy_ner/: config.cfg  meta.json
src/data_factory/enrichjsons/models/spacy_ner/ner/: model  moves
src/data_factory/enrichjsons/models/spacy_ner/vocab/: strings.json
src/data_factory/jsonschemas/: collection_schema.json  paper_enriched_schema.json  paper_raw_schema.json  volume_schema.json
src/data_factory/paper2json/: conf2jsons.py  main.py  raw_paper.py
src/data_factory/paper2json/doc2json/: client.py  grobid_util.py  process_pdf.py  utils.py
src/data_factory/paperuploader/: paper_uploader.py  runner.py
src/data_factory/prepare_collection_venue/: main.py  non_acl_main.py
