[project]
name = "data-factory"
version = "0.1.0"
description = ""
authors = [
    {name = "sobamchan", email = "oh.sore.sore.soutarou@gmail.com"},
]
dependencies = [
    "acl-anthology-py>=0.5.1",
    "beautifulsoup4>=4.13.3",
    "en-core-web-sm",
    "iclr-downloader>=0.1.3",
    "jsonschema>=4.23.0",
    "lxml>=4.9.4",
    "neurips-downloader>=0.1.2",
    "numpy<2.0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.2",
    "sienna>=0.2.6",
    "spacy>=3.8.4",
    "torch==2.2.2",
    "tqdm>=4.67.1",
    "transformers>=4.36.2",
]
requires-python = ">=3.11.5"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
line-length = 88

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "neovim>=0.3.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pyright>=1.1.341",
    "null>=0.6.1",
    "ruff>=0.7.4",
    "check-jsonschema>=0.27.3",
    "pytest>=7.4.3",
    "mypy>=1.11.1",
    "ruff-lsp>=0.0.58",
]

[too.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C4",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "TCH",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "SIM", # flake8-simplify
  "Q", # flake8-quotes
  "PIE", # flake8-pie
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
  "C90",  # mccabe
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
files = ["src", "tests"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "datasets",
    "transformers",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpath = ["tests"]
addopts = "--cov=data_factory --cov-report=term-missing -vv"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
